<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="122dp">

    <ImageView
        android:id="@+id/img_app_logo"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="118dp"
        android:layout_height="24dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="74dp"
        android:text="@string/app_name_detail"
        android:gravity="center|start"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:singleLine="true"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_app_code_info"
        android:layout_width="100dp"
        android:layout_height="21dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="45dp"
        android:text="@string/app_code_detail"
        android:gravity="center|start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:singleLine="true"
        android:ellipsize="end"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tv_app_download_count"
        android:layout_width="73dp"
        android:layout_height="19dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="17dp"
        android:text="@string/app_download_count"
        android:gravity="center|start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="65dp"
        android:layout_height="27dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="66dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_display_more_operation"
        android:layout_width="65dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_height="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fold"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>

</android.support.constraint.ConstraintLayout>